page anniversaire version mobile correction taille deuxieme  image birthdat pour test performances

--- a/Anniversaires/anniversaire.css
+++ b/Anniversaires/anniversaire.css
@@ -11,7 +11,7 @@ main {
 .birthday-picture,
 .tarif-content {
 	border: solid 6px white;
-  max-width: 350px;
+  width: 100%;
 }
 
 .content {
